app/styles/_wikia-variables.scss
// Wikia Variables
// TODO: This file may get broken out into smaller files later if we decide we'd prefer the granularity to the
// 10,000 foot view.

//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
// Z-Index Implementations
//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

// z-min
// z-1
$z-ads-top-leaderboard: $z-1;
$z-spinner-before: $z-1;
$z-video-provider-ooyala-override: $z-1;
$z-portable-infobox-collapse: $z-1;
$z-discussion-sticky-editor: $z-7;
// z-2
$z-spinner-after: $z-2;
// z-3
// z-4
// z-5
// z-6
$z-header-badge-image: $z-6;
// z-7
$z-ads-floor: $z-7;
$z-site-head: $z-7;
// z-8
$z-lightbox-footer: $z-8;
$z-lightbox-header: $z-8;
$z-lightbox-wrapper: $z-8;
$z-side-nav-overlay: $z-8;
$z-discussion-editor: $z-8;
$z-highlight-overlay: $z-8;
// z-9
$z-alert-notification: $z-9;
$z-modal-dialog: $z-9;
$z-side-nav: $z-9;
$z-highlight-overlay-content: $z-9;
// z-max

//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
// Global Variables
//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

// Border Radius
$border-radius-global: rem-calc(2);

// Article horizontal padding
$article-horizontal-padding: 1.125rem;

// Colors

$color-blue-brand: $color-blue-light;
$color-gray-semi: $color-blue-gray;

//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
// Module Variables
//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

// All variables should live here to prevent shadowing of variables and provide a central location for developers to
// quickly modify the application

$overlay-background-color: rgba(0, 0, 0, 0.5);
$box-shadow-color: rgba(0, 0, 0, 0.3);

$border-color-light: $color-gray-light;

$element-active-bg: $color-gray-light;

$modal-background: $color-gray-dark;
$modal-text-color: $color-white;

$search-box-border-color: $color-blue-gray-light;
$search-box-text-color: $color-blue-gray;
$spinner-color: $color-blue-brand;

$side-nav-item-gutter: rem-calc(13);
$side-nav-width: rem-calc(260);
$side-nav-offset: $side-nav-width * -1;
$transition-length: .1s;

//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
// Vertical variables
//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
$verticals: comics games books movies lifestyle music tv;
$vertical-colors: (
		$color-hub-comics
		$color-hub-games
		$color-hub-books
		$color-hub-movies
		$color-hub-lifestyle
		$color-hub-music
		$color-hub-tv
);

//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
// Smart banner
//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
$smart-banner-android-height: rem-calc(66);

//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
// Site head
//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
$site-head-top-border-height: rem-calc(6);
$site-head-content-height: rem-calc(49);
$site-head-fandom-bar-height: rem-calc(23);
$site-head-height: $site-head-top-border-height + $site-head-content-height;
$site-head-with-fandom-bar-height: $site-head-height + $site-head-fandom-bar-height;
$icon-site-head-width: rem-calc(60);
$icon-site-head-height: 50px;

//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
// Discussion header
//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
$discussion-header-height: 50px;
$theme-bar-height: 10px;

$discussion-post-type-smaller-than-min: .7rem;

//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
// Main Page
//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
$featured-content-margin-bottom: 20px;

